--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -1,13 +1,16 @@
-<p style="color: green"><%= notice %></p>
+<%= simple_form_for(@food) do |f| %>
+  <%= f.error_notification %>
+  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<%= render @game %>
+  <div class="form-inputs">
+    <%= f.input :name %>
+    <%= f.association :game, collection: Game.all, label_method: :name, value_method: :id, include_blank: false %>
+    <%= f.input :image %>
+    <%= f.input :description %>
+    <%= f.association :recipe, collection: Recipe.all, label_method: :name, value_method: :id, include_blank: false %>
+  </div>
 
-<div>
-  <%= link_to "Edit this game", edit_game_path(@game) %> |
-  <%= link_to "Back to games", games_path %>
-
-  <%= button_to "Destroy this game", @game, method: :delete %>
-  
-</div>
-
-RUBY 
+  <div class="form-actions">
+    <%= f.button :submit %>
+  </div>
+<% end %>
