--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -34,8 +34,8 @@
   <div class="mt-5">
   <hr class="my-4">
   <div class="d-flex justify-content-center">
-    <%= link_to "Edit this game", edit_game_path(@game), class: "btn btn-warning mx-2" %>
-    <%= link_to "Back to games", games_path, class: "btn btn-secondary mx-2" %>
-    <%= button_to "Destroy this game", @game, method: :delete, class: "btn btn-danger mx-2" %>
+    <%= link_to "Modifier les infos de ce jeu", edit_game_path(@game), class: "btn btn-warning mx-2" %>
+    <%= link_to "Retourner à la liste des jeux", games_path, class: "btn btn-secondary mx-2" %>
+    <%= button_to "Effacer ce jeu", @game, method: :delete, class: "btn btn-danger mx-2" %>
   </div>
 </div>
