--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "New food" %>
 
 <div class="container mt-5">
-  <h1 class="text-center mb-4">Create a New Food</h1>
+  <h1 class="text-center mb-4">Créer un nouveau plat</h1>
 
   <div class="card">
     <div class="card-body">
@@ -19,8 +19,8 @@
             </div>
 
             <div class="form-group">
-              <%= form.label :game_id, class: "form-label" %>
-              <%= form.collection_select :game_id, Game.all, :id, :title, { prompt: "Select a Game" }, class: "form-control" %>
+              <%= form.label :game_id, class: "form-label" %>   
+              <%= form.collection_select :game_id, Game.all, :id, :title, { prompt: "Sélectionnez un jeu" }, class: "form-control" %>
             </div>
           </div>
 
@@ -33,13 +33,13 @@
         </div>
 
         <div class="form-group text-center mt-4">
-          <%= form.submit "Create Food", class: "btn btn-primary" %>
+          <%= form.submit "Créer le plat", class: "btn btn-primary" %>
         </div>
       <% end %>
     </div>
   </div>
 
   <div class="text-center mt-4">
-    <%= link_to "Back to foods", foods_path, class: "btn btn-secondary" %>
+    <%= link_to "Retour aux plats", foods_path, class: "btn btn-secondary" %>
   </div>
 </div>
