--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,45 +1,5 @@
 <% content_for :title, "New food" %>
 
-<div class="container mt-5">
-  <h1 class="text-center mb-4">Créer un nouveau plat</h1>
+<%= render "form", food: @food %>
 
-  <div class="card">
-    <div class="card-body">
-      <%= form_with(model: @food, local: true) do |form| %>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= form.label :name, class: "form-label" %>
-              <%= form.text_field :name, class: "form-control" %>
-            </div>
-
-            <div class="form-group">
-              <%= form.label :image, class: "form-label" %>
-              <%= form.text_field :image, class: "form-control" %>
-            </div>
-
-            <div class="form-group">
-              <%= form.label :game_id, class: "form-label" %>   
-              <%= form.collection_select :game_id, Game.all, :id, :title, { prompt: "Sélectionnez un jeu" }, class: "form-control" %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= form.label :description, class: "form-label" %>
-              <%= form.text_area :description, class: "form-control", rows: 5 %>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group text-center mt-4">
-          <%= form.submit "Créer le plat", class: "btn btn-primary" %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-
-  <div class="text-center mt-4">
-    <%= link_to "Retour aux plats", foods_path, class: "btn btn-secondary" %>
-  </div>
-</div>
+<br>
