--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,33 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="<%= root_path %>">Recipe Game</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <%= link_to "Home", root_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Games", games_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Foods", foods_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Recipes", recipes_path, class: "nav-link" %> <!-- Ajout du lien vers la page Recipe -->
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container mt-4">
+      <%= yield %>
+    </div>
 
     <%# Import des JavaScript via Importmap %>
     <%= javascript_importmap_tags %>
