--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,11 +1,7 @@
-<% content_for :title, "New recipe" %>
+<% content_for :title, "Créer une recette" %>
 
-<h1>New recipe</h1>
+<h1 class="text-center mb-4">Créer une nouvelle recette</h1>
 
-<%= render "form", recipe: @recipe %>
-
-<br>
-
-<div>
-  <%= link_to "Back to recipes", recipes_path %>
+<div class="container">
+  <%= render "form", recipe: @recipe %>
 </div>
