--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,12 +1,16 @@
 <% content_for :title, "Editing recipe" %>
 
-<h1>Editing recipe</h1>
+<div class="container mt-5">
+  <h1 class="text-center mb-4">Modifier la recette</h1>
 
-<%= render "form", recipe: @recipe %>
+  <div class="card">
+    <div class="card-body">
+      <%= render "form", recipe: @recipe %>
+    </div>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Show this recipe", @recipe %> |
-  <%= link_to "Back to recipes", recipes_path %>
+  <div class="text-center mt-4">
+    <%= link_to "Voir cette recette", @recipe, class: "btn btn-info mr-2" %>
+    <%= link_to "Retour aux recettes", recipes_path, class: "btn btn-secondary" %>
+  </div>
 </div>
