--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,14 +1,20 @@
-
 <%= simple_form_for(@recipe) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :Name %>
-    <%= f.input :ingredient_list %>
+    <div class="form-group">
+      <%= f.label :Name, class: "form-label" %>
+      <%= f.input :Name, class: "form-control", placeholder: "Nom de la recette" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :ingredient_list, class: "form-label" %>
+      <%= f.input :ingredient_list, class: "form-control", placeholder: "Liste des ingrédients" %>
+    </div>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <div class="form-actions text-center">
+    <%= f.button :submit, "Enregistrer", class: "btn btn-primary" %>
   </div>
 <% end %>
