--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,10 +1,16 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @recipe %>
+<div class="card mb-4">
+  <div class="card-body">
+    <h2 class="card-title"><%= @recipe.Name %></h2>
+    <p class="card-text"><strong>Ingrédients :</strong> <%= @recipe.ingredient_list %></p>
+  </div>
+</div>
 
-<div>
-  <%= link_to "Edit this recipe", edit_recipe_path(@recipe) %> |
-  <%= link_to "Back to recipes", recipes_path %>
+<div class="d-flex justify-content-between">
+  <%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: "btn btn-warning" %>
+  
+  <%= button_to "Destroy this recipe", @recipe, method: :delete, class: "btn btn-danger", data: { confirm: "Are you sure you want to delete this recipe?" } %>
 
-  <%= button_to "Destroy this recipe", @recipe, method: :delete %>
+  <%= link_to "Back to recipes", recipes_path, class: "btn btn-secondary" %>
 </div>
