--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -32,6 +32,11 @@
           </div>
         </div>
 
+        <div class="form-group">
+          <%= form.label :recipe_id, "Recette associée", class: "form-label" %>
+          <%= form.collection_select :recipe_id, Recipe.all, :id, :Name, { prompt: "Sélectionner une recette" }, class: "form-control" %>
+        </div>
+
         <div class="form-group text-center mt-4">
           <%= form.submit "Mettre à jour", class: "btn btn-primary" %>
         </div>
