--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -20,7 +20,7 @@
 
             <div class="form-group">
               <%= form.label :game_id, class: "form-label" %>
-              <%= form.collection_select :game_id, Game.all, :id, :title, { prompt: "Select a Game" }, class: "form-control" %>
+              <%= form.collection_select :game_id, Game.all, :id, :title, { prompt: "Select a Game" }, { class: "form-control" } %>
             </div>
           </div>
 
@@ -34,7 +34,7 @@
 
         <div class="form-group">
           <%= form.label :recipe_id, "Recette associée", class: "form-label" %>
-          <%= form.collection_select :recipe_id, Recipe.all, :id, :Name, { prompt: "Sélectionner une recette" }, class: "form-control" %>
+          <%= form.collection_select :recipe_id, Recipe.all, :id, :Name, { prompt: "Sélectionner une recette" }, { class: "form-control" } %>
         </div>
 
         <div class="form-group text-center mt-4">
