--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -5,12 +5,12 @@
   <div class="form-inputs">
     <div class="form-group">
       <%= f.label :Name, class: "form-label" %>
-      <%= f.input :Name, class: "form-control", placeholder: "Nom de la recette" %>
+      <%= f.input :Name, class: "form-control", placeholder: "Titre" %>
     </div>
 
     <div class="form-group">
       <%= f.label :ingredient_list, class: "form-label" %>
-      <%= f.input :ingredient_list, class: "form-control", placeholder: "Liste des ingrédients" %>
+      <%= f.input :ingredient_list, class: "form-control", placeholder: "Liste d'ingrédients" %>
     </div>
   </div>
 
