--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,16 +29,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <%= link_to "Home", root_path, class: "nav-link" %>
+              <%= link_to "Accueil", root_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "Games", games_path, class: "nav-link" %>
+              <%= link_to "Jeux", games_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "Foods", foods_path, class: "nav-link" %>
+              <%= link_to "Plats", foods_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "Recipes", recipes_path, class: "nav-link" %> <!-- Ajout du lien vers la page Recipe -->
+              <%= link_to "Recettes", recipes_path, class: "nav-link" %> <!-- Ajout du lien vers la page Recipe -->
             </li>
           </ul>
         </div>
