--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -13,7 +13,7 @@
     <% @games.each do |game| %>
       <div class="col-sm-6 col-md-4 col-lg-4 mb-4">
         <div class="card">
-          <img src="<%= game.cover %>" class="card-img-top" alt="<%= game.title %>">
+          <img src="<%= game.cover %>" class="card-img-top object-fit-cover" alt="<%= game.title %>">
           <div class="card-body">
             <h5 class="card-title"><%= game.title %></h5>
             <p class="card-text"><%= game.description %></p>
