--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
     <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", media: "all" %>
 
   </head>
+<style>
+  .navbar {
+    background-color:rgb(241, 120, 120) !important ; 
+  }
+</style>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
