--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,16 +34,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <%= link_to "Accueil", root_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
               <%= link_to "Jeux", games_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
               <%= link_to "Plats", foods_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "Recettes", recipes_path, class: "nav-link" %> <!-- Ajout du lien vers la page Recipe -->
+              <%= link_to "Recettes", recipes_path, class: "nav-link" %>
             </li>
           </ul>
         </div>
