--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -16,7 +16,7 @@
           <img src="<%= food.image %>" class="card-img-top object-fit-cover" alt="<%= food.name %>">
           <div class="card-body">
             <h5 class="card-title"><%= food.name %></h5>
-            <p class="card-text"><%= food.description %></p>
+            <p class="card-text"><%= truncate(food.description, length: 15, omission: '...') %></p>
             <p class="card-text"><strong>Game:</strong> <%= food.game.title %></p>
             <%= link_to "Voir ce plat", food, class: "btn btn-primary" %>
           </div>
