--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   </head>
 <style>
   .navbar {
-    background-color:rgb(241, 120, 120) !important ; 
+    background-color: #e70d1e !important ; 
   }
 </style>
 
