--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
     <%= yield :head %>
 
     <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
+    <link rel="icon" href="https://mario.wiki.gallery/images/a/ae/Honey_Mushroom_PMTTYDNS_icon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://mario.wiki.gallery/images/a/ae/Honey_Mushroom_PMTTYDNS_icon.png">
 
     <%# Lien vers le CSS de Bootstrap via CDN %>
     <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", media: "all" %>
