la home page est finie

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,15 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="<%= foods_path %>">Recipe Game</a>
+        <a class="navbar-brand" href="<%= root_path %>">Recipe Game</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <%= link_to "Accueil", root_path, class: "nav-link" %>
+            </li>
             <li class="nav-item">
               <%= link_to "Jeux", games_path, class: "nav-link" %>
             </li>
