--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,53 +7,72 @@
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= yield :head %>
-
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="https://mario.wiki.gallery/images/a/ae/Honey_Mushroom_PMTTYDNS_icon.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="https://mario.wiki.gallery/images/a/ae/Honey_Mushroom_PMTTYDNS_icon.png">
-
     <%# Lien vers le CSS de Bootstrap via CDN %>
     <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", media: "all" %>
+    
+    <style>
+      .navbar {
+        background-color: #e70d1e !important; /* Couleur du header */
+      }
+
+      .footer {
+        background-color: #e70d1e; /* Couleur du footer */
+        color: white; /* Texte blanc pour contraster */
+        text-align: center;
+        padding: 10px 0;
+      }
+
+      /* Appliquer à tout le contenu pour garantir que le footer soit en bas */
+      .page-content {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .container {
+        flex-grow: 1;
+      }
+    </style>
 
   </head>
-<style>
-  .navbar {
-    background-color: #e70d1e !important ; 
-  }
-</style>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="<%= root_path %>">Recipe Game</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <%= link_to "Accueil", root_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Jeux", games_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Plats", foods_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Recettes", recipes_path, class: "nav-link" %>
-            </li>
-          </ul>
+    <div class="page-content">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="<%= foods_path %>">Recipe Game</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <%= link_to "Jeux", games_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Plats", foods_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Recettes", recipes_path, class: "nav-link" %>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+
+      <div class="container mt-4">
+        <%= yield %>
       </div>
-    </nav>
-    <div class="container mt-4">
-      <%= yield %>
+
+      <footer class="footer">
+        <p>&copy; 2025 Recipe Game. Tous droits réservés.</p>
+      </footer>
     </div>
 
-    <%# Import des JavaScript via Importmap %>
     <%= javascript_importmap_tags %>
   </body>
 </html>
